2002-01-29  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/result.py (Result.MakeDomNode): Fix typo.

	* qm/test/database.py (ItemDescriptor._MakeItem): Tell a newly
	created test or resource what its name is.

	* qm/xmlutil.py (discard_node): Remove.
	* qm/test/xml_result_stream.py (XMLResultStream.WriteResult):
	Do not use it.
	* qm/test/qmtest.py: Remove Python 1.5 work-around.
	* qm/test/result.py: Alphabetize annotations in results file.
	
	* qm/test/cmdline.py (QMTest.MakeContext): Fix spelling of
	context file option.

2002-01-27  Mark Mitchell  <mark@codesourcery.com>

	* README (REQUIREMENTS): Note that Python 2.1 or higher
	is required.
	* README.sources: Remove restriction that software must work with
	Python 1.5.
	* configure.in: Check for Python 2.1 or higher.
	* configure: Regenerated.
	* qm/qm.sh (QM_PYTHON_FLAGS): New variable.
	(qm_python): Check /usr/bin/python2 before falling back to
	the python in the PATH.
	* qm/queue.py: Fix copyright notice.
	* qm/setup_path.py.in: Issue an error if an old version of
	Python is in use.
	* qm/trace.py: New file.
	* qm/test/cmdline.py (QMTest.__init__): Create a trace object.
	(QMTest.GetTracer): Return it.
	* qm/test/commnd_thread.py: Fix copyright notice.
	* qm/test/execution_engine.py: Likewise.
	(ExecutionEngine): Add trace message throughout.
	(ExecutionEngine._Trace): New method.
	* qm/test/target.py (Target.RunTest): Remove unnecessary code.
	* qm/test/doc/reference.xml: Update description of how QMTest
	locates the python interpreter to use.
	
2002-01-23  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (INSTALL_DIR): Set the mode of the installed
	directory.

2002-01-17  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Issue an error if distutils is not installed.
	* configure: Regenerated.
	* qm/test/doc/tour.xml: Update output display.	

	* GNUmakefile.in (SCRIPTS): Add $(SCRIPT_EXT).

2002-01-16  Mark Mitchell  <mark@codesourcery.com>
